--- a/templates/index.html
+++ b/templates/index.html
@@ -5,33 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/css/style.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Hangman</title>
 </head>
 <body>
 
-    <div>
-        <p>
-            nombre d'essai restant : {{.Attempts}}
-        </p>
-        <p>
-            etat actuel : {{range .WordInProgress}}
+    <div id="container"> 
+
+        <h1 id="ToFind">
+            Etat actuel : {{range .WordInProgress}}
                             {{.}}
                         {{end}}
-        </p>
+        </h1>
+        <h3 id="Attempts">nombre d'essai restant : {{.Attempts}}</h3>
     </div>
-
-
-    <div>
-        <form action="/hangman" method="post" class="form-example">
-            <div class="input-group mb-3">
-                <input name="letter" type="text" class="form-control" placeholder="Choose a letter" aria-label="Choose a letter" aria-describedby="basic-addon1">
-              </div>
-            <div class="form-example">
-                <button type="submit" class="btn btn-outline-primary">Envoyer</button>
-            </div>
-          </form>
-    </div>
+    <form action="/hangman" method="post" class="form-example">
+        <input type="text" class="choose" name="Letter" autofocus placeholder="Choose a letter"/>
+        <input type="submit" class="submit" name="Submit" value="Envoyer" />
+    </form>
     
 </body>
 </html>
